--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "vue": "^2.4.1",
+    "vue-awesome-mui": "^1.0.0",
     "vue-awesome-swiper": "^2.5.4",
     "vue-loader": "^12.2.2",
     "vue-resource": "^1.3.4",
