--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.2.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "multer": "^1.3.0",
     "muse-ui": "^2.1.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
