--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-loader": "^7.1.1",
+    "body-parser": "^1.17.2",
     "cheerio": "^1.0.0-rc.2",
     "cookie": "^0.3.1",
     "css-loader": "^0.28.4",
@@ -21,6 +22,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "muse-ui": "^2.1.0",
+    "mysql": "^2.14.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
